--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -2,12 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import multiprocessing\n",
-    "mport pandas as pd\n",
+    "import pandas as pd\n",
     "import numpy as np\n",
     "import scipy.stats as sc\n",
     "import matplotlib.pyplot as plt\n",
@@ -19,6 +30,146 @@
     "\n",
     "multiprocessing.cpu_count()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Read in the data and clean it up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# path to file\n",
+    "path = '/home/jovyan/work/UrbanForest/all_clean_LAcounty_sunset.hdf'\n",
+    "\n",
+    "# read the hdf\n",
+    "la = pd.read_hdf(path, key='data')\n",
+    "\n",
+    "# select desired columns\n",
+    "cols=['ID', 'LATITUDE', 'LONGITUDE', 'DBH_LO', 'DBH_HI', 'CREATED',\n",
+    "      'UPDATED', 'SOURCE', 'Name_matched', 'Zone']\n",
+    "la = la[cols]\n",
+    "\n",
+    "# drop NAs\n",
+    "la.dropna(how='any', axis=0, subset=['DBH_LO', 'DBH_HI'], inplace=True)\n",
+    "\n",
+    "# capitalize genus names\n",
+    "la['Name_matched'] = la.Name_matched.str.capitalize()\n",
+    "\n",
+    "# convert DBH to cm\n",
+    "la['dbh_low']  = 2.54 * la.DBH_LO\n",
+    "la['dbh_high'] = 2.54 * la.DBH_HI\n",
+    "la.drop(['DBH_LO', 'DBH_HI'], axis=1, inplace=True)\n",
+    "\n",
+    "# Change date fields to dateTime type\n",
+    "la['created'] = pd.to_datetime(la.CREATED)\n",
+    "la['updated'] = pd.to_datetime(la.UPDATED)\n",
+    "la.drop(['CREATED', 'UPDATED'], axis=1, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " We will first use allometric equations from :\n",
+    "\n",
+    " McPherson, E. Gregory; van Doorn, Natalie S.; Peper, Paula J. 2016. Urban tree database.\n",
+    " Fort Collins, CO: Forest Service Research Data Archive. Updated 21 January 2020.\n",
+    " https://doi.org/10.2737/RDS-2016-0005\n",
+    "\n",
+    " 'Apps min' and 'Apps max' give the input range (cm) that the authors feel \n",
+    "  that the equations are reliable\n",
+    " 'InlEmp' and 'SoCalC' are Climate zones where the eqs are different.\n",
+    "  SoCalC reference city is Santa Monica, InlEmp is Claremont,\n",
+    "  see Table 1, p16 for further Climate zone details.  \n",
+    "  \n",
+    "  After reading the equations and coefficients, we will get rid of trees that only occur a few times, and trees that we o not have equations for."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 664155 entries, 0 to 1089845\n",
+      "Data columns (total 10 columns):\n",
+      " #   Column        Non-Null Count   Dtype         \n",
+      "---  ------        --------------   -----         \n",
+      " 0   ID            664155 non-null  int64         \n",
+      " 1   LATITUDE      664155 non-null  float64       \n",
+      " 2   LONGITUDE     664155 non-null  float64       \n",
+      " 3   SOURCE        664155 non-null  object        \n",
+      " 4   Name_matched  664155 non-null  object        \n",
+      " 5   Zone          663384 non-null  float64       \n",
+      " 6   dbh_low       664155 non-null  float64       \n",
+      " 7   dbh_high      664155 non-null  float64       \n",
+      " 8   created       28472 non-null   datetime64[ns]\n",
+      " 9   updated       28472 non-null   datetime64[ns]\n",
+      "dtypes: datetime64[ns](2), float64(5), int64(1), object(2)\n",
+      "memory usage: 55.7+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# The equations\n",
+    "def mcpherson_eqs():\n",
+    "    '''returns dict of equations from table 3 (p24) of McPherson 2020\n",
+    "    functions use np so as to be vectorized'''\n",
+    "\n",
+    "    eq_dict = {'lin'        : (lambda a, b, c, d, e, x, mse: a + b * (x)), \n",
+    "                'quad'      : (lambda a, b, c, d, e, x, mse: a + b * x + c * x**2),\n",
+    "                'cub'      : (lambda a, b, c, d, e, x, mse: a + b * x + c * x**2 + d * x**3),\n",
+    "                'quart'     : (lambda a, b, c, d, e, x, mse:a + b * x + c *x**2 + d * x**3 + e * x**4), \n",
+    "                'loglogw1' : (lambda a, b, c, d, e, x, mse: np.exp(a + b * np.log(np.log(x + 1) + (mse/2)))),\n",
+    "                'loglogw2' : (lambda a, b, c, d, e, x, mse: np.exp(a + b * np.log(np.log(x + 1)) + (np.sqrt(x) + (mse/2)))),\n",
+    "                'loglogw3' : (lambda a, b, c, d, e, x, mse: np.exp(a + b * np.log(np.log(x + 1)) + (x) + (mse/2))),\n",
+    "                'loglogw4' : (lambda a, b, c, d, e, x, mse: np.exp(a + b * np.log(np.log(x + 1)) + (x**2) + (mse/2))),\n",
+    "                'expow1'    : (lambda a, b, c, d, e, x, mse: np.exp(a+ b * (x) + (mse/2))),\n",
+    "                'expow2'    : (lambda a, b, c, d, e, x, mse: np.exp(a + b * (x) + np.sqrt(x) + (mse/2))),\n",
+    "                'expow3'    : (lambda a, b, c, d, e, x, mse: np.exp(a + b * (x) + (x) + (mse/2))),\n",
+    "                'expow4'    : (lambda a, b, c, d, e, x, mse: np.exp(a + b * (x) + (x**2) + (mse/2)))}\n",
+    "\n",
+    "    return(eq_dict)\n",
+    "\n",
+    "eq_dict = mcpherson_eqs()\n",
+    "\n",
+    "# The cooeficients\n",
+    "coef_df = pd.read_csv('TS6_Growth_coefficients.csvx',\n",
+    "usecols=['Region', 'Scientific Name', 'Independent variable', 'Predicts component ', 'EqName', 'Units of predicted components',\n",
+    "'EqName', 'a', 'b', 'c', 'd', 'e', 'Apps min', 'Apps max'])\n",
+    "\n",
+    "# Find all the trees with over 100 occurances in the dataset\n",
+    "trees = la.Name_matched.value_counts()\n",
+    "trees = list(trees.where(trees > 100).dropna().index)\n",
+    "\n",
+    "# drop trees we do not have equations for\n",
+    "trees = [s for s in trees if s in coef_df['Scientific Name'].unique()]\n",
+    "la = la.loc[la.Name_matched.isin(trees)]\n",
+    "\n",
+    "la.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -37,7 +188,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
