ipynb,  conda installing pdal, making pipelin ...

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -579,10 +579,67 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Go make coffee while this happens. Conda takes years to do anything!\n",
+    "#!conda install -c --yes conda-forge python-pdal"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "Now lets try to get the point cloud within the bbox using PDALs ept reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pdal'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-95-112b4c78168c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpdal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstring\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTemplate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m t =  Template('''\n\u001b[1;32m      5\u001b[0m     {\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pdal'"
+     ]
+    }
+   ],
+   "source": [
+    "import pdal\n",
+    "from string import Template\n",
+    "\n",
+    "t =  Template('''\n",
+    "    {\n",
+    "        \"pipeline\": [\n",
+    "        {\n",
+    "        \"bounds\": \"(${scaled_bbox})\",\n",
+    "        \"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018\",\n",
+    "        \"type\": \"readers.ept\",\n",
+    "        \"tag\": \"readdata\"\n",
+    "        }\n",
+    "        ]\n",
+    "    }''')\n",
+    "\n",
+    "\n",
+    "\n",
+    "pipe = t.substitute(scaled_bbox=scaled_bbox)\n",
+    "\n",
+    "pipeline = pdal.Pipeline(pipe)\n",
+    "pipeline.validate()\n",
+    "count = pipeline.execute()\n",
+    "S = pipeline.arrays[0]\n",
+    "metadata = pipeline.metadata\n",
+    "log = pipeline.log\n",
+    "sh = S.shape\n",
+    "print(f'S is a numpy structured array of shape {sh}.')"
    ]
   },
   {
