--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "16"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -168,51 +168,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 16.8M  100 16.8M    0     0  15.3M      0  0:00:01  0:00:01 --:--:-- 15.3M\n",
-      "Archive:  awscli-bundle.zip\n",
-      "  inflating: awscli-bundle/install   \n",
-      "  inflating: awscli-bundle/packages/rsa-3.4.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/docutils-0.15.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/futures-3.3.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/PyYAML-5.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/colorama-0.4.1.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/urllib3-1.25.7.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/six-1.15.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/botocore-1.19.57.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/jmespath-0.10.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/virtualenv-16.7.8.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/colorama-0.4.3.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/awscli-1.18.217.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/urllib3-1.26.2.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/PyYAML-5.3.1.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/python-dateutil-2.8.0.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/s3transfer-0.3.4.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/pyasn1-0.4.8.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/setup/wheel-0.33.6.tar.gz  \n",
-      "  inflating: awscli-bundle/packages/setup/setuptools_scm-3.3.3.tar.gz  \n",
-      "Running cmd: /opt/conda/bin/python -m venv /home/jovyan/.local/lib/aws\n",
-      "Running cmd: /home/jovyan/.local/lib/aws/bin/pip install --no-binary :all: --no-cache-dir --no-index --find-links file://. setuptools_scm-3.3.3.tar.gz\n",
-      "Running cmd: /home/jovyan/.local/lib/aws/bin/pip install --no-binary :all: --no-cache-dir --no-index --find-links file://. wheel-0.33.6.tar.gz\n",
-      "Running cmd: /home/jovyan/.local/lib/aws/bin/pip install --no-binary :all: --no-build-isolation --no-cache-dir --no-index  --find-links file:///home/jovyan/work/Allometry/awscli-bundle/packages awscli-1.18.217.tar.gz\n",
-      "You can now run: /home/jovyan/bin/aws --version\n",
-      "\n",
-      "Note: AWS CLI version 2, the latest major version of the AWS CLI, is now stable and recommended for general use. For more information, see the AWS CLI version 2 installation instructions at: https://docs.aws.amazon.com/cli/latest/userguide/install-cliv2.html\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!curl \"https://s3.amazonaws.com/aws-cli/awscli-bundle.zip\" -o \"awscli-bundle.zip\"\n",
-    "!unzip awscli-bundle.zip \n",
-    "!./awscli-bundle/install -b ~/bin/aws"
+    "#!curl \"https://s3.amazonaws.com/aws-cli/awscli-bundle.zip\" -o \"awscli-bundle.zip\"\n",
+    "#!unzip awscli-bundle.zip \n",
+    "#!./awscli-bundle/install -b ~/bin/aws"
    ]
   },
   {
@@ -224,9 +186,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mkdir: cannot create directory ‘/home/jovyan/work/tmp’: File exists\n"
+     ]
+    }
+   ],
    "source": [
     "# make a tmp directory\n",
     "! mkdir /home/jovyan/work/tmp\n",
@@ -247,16 +217,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CompletedProcess(args='/home/jovyan/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/work/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (8.9 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
+       "CompletedProcess(args='/home/jovyan/bin/aws s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json /home/jovyan/work/tmp --no-sign-request', returncode=0, stdout=b'Completed 2.4 KiB/2.4 KiB (7.3 KiB/s) with 1 file(s) remaining\\rdownload: s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json to ../tmp/ept.json\\n', stderr=b'')"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -276,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -298,7 +268,7 @@
        " 'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -362,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +454,7 @@
        "11     45.72 2018-09-19 2018-09-19  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -538,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -580,12 +550,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting package metadata (current_repodata.json): ...working... done\n",
+      "Solving environment: ...working... done\n",
+      "\n",
+      "\n",
+      "==> WARNING: A newer version of conda exists. <==\n",
+      "  current version: 4.8.2\n",
+      "  latest version: 4.9.2\n",
+      "\n",
+      "Please update conda by running\n",
+      "\n",
+      "    $ conda update -n base conda\n",
+      "\n",
+      "\n",
+      "initializing UnlinkLinkTransaction with\n",
+      "  target_prefix: /opt/conda\n",
+      "  unlink_precs:\n",
+      "    conda-forge/linux-64::certifi-2020.4.5.2-py37hc8dfbb8_0\n",
+      "    conda-forge/linux-64::openssl-1.1.1g-h516909a_0\n",
+      "    conda-forge/linux-64::libgcc-ng-9.2.0-h24d8f2e_2\n",
+      "    conda-forge/linux-64::libstdcxx-ng-9.2.0-hdf63c60_2\n",
+      "    conda-forge/linux-64::ca-certificates-2020.4.5.2-hecda079_0\n",
+      "  link_precs:\n",
+      "    conda-forge/linux-64::ca-certificates-2020.12.5-ha878542_0\n",
+      "    conda-forge/linux-64::libstdcxx-ng-9.3.0-h6de172a_18\n",
+      "    conda-forge/linux-64::libgcc-ng-9.3.0-h2828fa1_18\n",
+      "    conda-forge/linux-64::openssl-1.1.1i-h7f98852_0\n",
+      "    conda-forge/linux-64::certifi-2020.12.5-py37h89c1867_1\n",
+      "    conda-forge/linux-64::python-pdal-2.3.7-py37h2527ec5_0\n",
+      "\n",
+      "\n",
+      "\n",
+      "## Package Plan ##\n",
+      "\n",
+      "  environment location: /opt/conda\n",
+      "\n",
+      "  added / updated specs:\n",
+      "    - python-pdal\n",
+      "\n",
+      "\n",
+      "The following packages will be downloaded:\n",
+      "\n",
+      "    package                    |            build\n",
+      "    ---------------------------|-----------------\n",
+      "    ca-certificates-2020.12.5  |       ha878542_0         137 KB  conda-forge\n",
+      "    certifi-2020.12.5          |   py37h89c1867_1         143 KB  conda-forge\n",
+      "    libgcc-ng-9.3.0            |      h2828fa1_18         7.8 MB  conda-forge\n",
+      "    libstdcxx-ng-9.3.0         |      h6de172a_18         4.0 MB  conda-forge\n",
+      "    openssl-1.1.1i             |       h7f98852_0         2.1 MB  conda-forge\n",
+      "    python-pdal-2.3.7          |   py37h2527ec5_0         262 KB  conda-forge\n",
+      "    ------------------------------------------------------------\n",
+      "                                           Total:        14.5 MB\n",
+      "\n",
+      "The following NEW packages will be INSTALLED:\n",
+      "\n",
+      "  python-pdal        conda-forge/linux-64::python-pdal-2.3.7-py37h2527ec5_0\n",
+      "\n",
+      "The following packages will be UPDATED:\n",
+      "\n",
+      "  ca-certificates                     2020.4.5.2-hecda079_0 --> 2020.12.5-ha878542_0\n",
+      "  certifi                         2020.4.5.2-py37hc8dfbb8_0 --> 2020.12.5-py37h89c1867_1\n",
+      "  libgcc-ng                                9.2.0-h24d8f2e_2 --> 9.3.0-h2828fa1_18\n",
+      "  libstdcxx-ng                             9.2.0-hdf63c60_2 --> 9.3.0-h6de172a_18\n",
+      "  openssl                                 1.1.1g-h516909a_0 --> 1.1.1i-h7f98852_0\n",
+      "\n",
+      "\n",
+      "Preparing transaction: ...working... done\n",
+      "Verifying transaction: ...working... done\n",
+      "Executing transaction: ...working... ===> UNLINKING PACKAGE: conda-forge/linux-64::certifi-2020.4.5.2-py37hc8dfbb8_0 <===\n",
+      "  prefix=/opt/conda\n",
+      "\n",
+      "\n",
+      "===> UNLINKING PACKAGE: conda-forge/linux-64::openssl-1.1.1g-h516909a_0 <===\n",
+      "  prefix=/opt/conda\n",
+      "\n",
+      "\n",
+      "===> UNLINKING PACKAGE: conda-forge/linux-64::libgcc-ng-9.2.0-h24d8f2e_2 <===\n",
+      "  prefix=/opt/conda\n",
+      "\n",
+      "\n",
+      "===> UNLINKING PACKAGE: conda-forge/linux-64::libstdcxx-ng-9.2.0-hdf63c60_2 <===\n",
+      "  prefix=/opt/conda\n",
+      "\n",
+      "\n",
+      "===> UNLINKING PACKAGE: conda-forge/linux-64::ca-certificates-2020.4.5.2-hecda079_0 <===\n",
+      "  prefix=/opt/conda\n",
+      "\n",
+      "\n",
+      "===> LINKING PACKAGE: conda-forge::ca-certificates-2020.12.5-ha878542_0 <===\n",
+      "  prefix=/opt/conda\n",
+      "  source=/opt/conda/pkgs/ca-certificates-2020.12.5-ha878542_0\n",
+      "\n",
+      "\n",
+      "===> LINKING PACKAGE: conda-forge::libstdcxx-ng-9.3.0-h6de172a_18 <===\n",
+      "  prefix=/opt/conda\n",
+      "  source=/opt/conda/pkgs/libstdcxx-ng-9.3.0-h6de172a_18\n",
+      "\n",
+      "\n",
+      "===> LINKING PACKAGE: conda-forge::libgcc-ng-9.3.0-h2828fa1_18 <===\n",
+      "  prefix=/opt/conda\n",
+      "  source=/opt/conda/pkgs/libgcc-ng-9.3.0-h2828fa1_18\n",
+      "\n",
+      "\n",
+      "===> LINKING PACKAGE: conda-forge::openssl-1.1.1i-h7f98852_0 <===\n",
+      "  prefix=/opt/conda\n",
+      "  source=/opt/conda/pkgs/openssl-1.1.1i-h7f98852_0\n",
+      "\n",
+      "\n",
+      "===> LINKING PACKAGE: conda-forge::certifi-2020.12.5-py37h89c1867_1 <===\n",
+      "  prefix=/opt/conda\n",
+      "  source=/opt/conda/pkgs/certifi-2020.12.5-py37h89c1867_1\n",
+      "\n",
+      "\n",
+      "===> LINKING PACKAGE: conda-forge::python-pdal-2.3.7-py37h2527ec5_0 <===\n",
+      "  prefix=/opt/conda\n",
+      "  source=/opt/conda/pkgs/python-pdal-2.3.7-py37h2527ec5_0\n",
+      "\n",
+      "\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "# Go make coffee while this happens. Conda takes years to do anything!\n",
-    "#!conda install -c --yes conda-forge python-pdal"
+    "#!conda install -c conda-forge  -y -v python-pdal"
    ]
   },
   {
@@ -597,18 +692,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pdal'",
+     "ename": "ImportError",
+     "evalue": "libpdal_base.so.12: cannot open shared object file: No such file or directory",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-95-112b4c78168c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpdal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstring\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTemplate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m t =  Template('''\n\u001b[1;32m      5\u001b[0m     {\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pdal'"
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-16-112b4c78168c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpdal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mstring\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mTemplate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m t =  Template('''\n\u001b[1;32m      5\u001b[0m     {\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/pdal/__init__.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0m__version__\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'2.3.7'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mpipeline\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mPipeline\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0marray\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mArray\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;34m.\u001b[0m\u001b[0mdimension\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdimensions\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/opt/conda/lib/python3.7/site-packages/pdal/pipeline.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mpdal\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mlibpdalpython\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mclass\u001b[0m \u001b[0mPipeline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mImportError\u001b[0m: libpdal_base.so.12: cannot open shared object file: No such file or directory"
      ]
     }
    ],
