pip install pdal works on Jupyter Lab Geospatial app

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -374,135 +374,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ID</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "      <th>SOURCE</th>\n",
-       "      <th>Name_matched</th>\n",
-       "      <th>Zone</th>\n",
-       "      <th>dbh_low</th>\n",
-       "      <th>dbh_high</th>\n",
-       "      <th>created</th>\n",
-       "      <th>updated</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>712088</td>\n",
-       "      <td>34.086805</td>\n",
-       "      <td>-118.384081</td>\n",
-       "      <td>A Plus</td>\n",
-       "      <td>Schinus molle</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>7.62</td>\n",
-       "      <td>15.24</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>712126</td>\n",
-       "      <td>34.086579</td>\n",
-       "      <td>-118.383939</td>\n",
-       "      <td>A Plus</td>\n",
-       "      <td>Olea europaea</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>30.48</td>\n",
-       "      <td>45.72</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>712134</td>\n",
-       "      <td>34.086542</td>\n",
-       "      <td>-118.383912</td>\n",
-       "      <td>A Plus</td>\n",
-       "      <td>Olea europaea</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>30.48</td>\n",
-       "      <td>45.72</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>712154</td>\n",
-       "      <td>34.086874</td>\n",
-       "      <td>-118.383809</td>\n",
-       "      <td>A Plus</td>\n",
-       "      <td>Olea europaea</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>30.48</td>\n",
-       "      <td>45.72</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>712164</td>\n",
-       "      <td>34.086845</td>\n",
-       "      <td>-118.383785</td>\n",
-       "      <td>A Plus</td>\n",
-       "      <td>Olea europaea</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>30.48</td>\n",
-       "      <td>45.72</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "      <td>2018-09-19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        ID   LATITUDE   LONGITUDE  SOURCE   Name_matched  Zone  dbh_low  \\\n",
-       "0   712088  34.086805 -118.384081  A Plus  Schinus molle  22.0     7.62   \n",
-       "4   712126  34.086579 -118.383939  A Plus  Olea europaea  22.0    30.48   \n",
-       "5   712134  34.086542 -118.383912  A Plus  Olea europaea  22.0    30.48   \n",
-       "8   712154  34.086874 -118.383809  A Plus  Olea europaea  22.0    30.48   \n",
-       "11  712164  34.086845 -118.383785  A Plus  Olea europaea  22.0    30.48   \n",
-       "\n",
-       "    dbh_high    created    updated  \n",
-       "0      15.24 2018-09-19 2018-09-19  \n",
-       "4      45.72 2018-09-19 2018-09-19  \n",
-       "5      45.72 2018-09-19 2018-09-19  \n",
-       "8      45.72 2018-09-19 2018-09-19  \n",
-       "11     45.72 2018-09-19 2018-09-19  "
+       "[-13271559, 3934093, -102275, -13064831, 4140821, 104453]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "la.head()"
+    "bounds"
    ]
   },
   {
@@ -514,8 +401,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
+   "execution_count": 87,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "# For now we will ad 0.00007 degrees in each direction, this is jus a guess based on 5th decimal place ~ 1.1m\n",
@@ -524,7 +415,7 @@
     "    '''Returns a bbox in ept coords.\n",
     "    If present bounds is of form [xmin, ymin, zmin, xmax, ymax, zmax]'''\n",
     "    \n",
-    "    buf = 0.007\n",
+    "    buf = 0.00007\n",
     "    xmin = lon - buf\n",
     "    ymin = lat - buf\n",
     "    xmax = lon + buf\n",
@@ -561,23 +452,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "lat is 34.086874365732\n",
-      "lon is -118.38380876846\n",
-      "bbox is ([-118.38470876846, -118.38290876846], [34.085974365732, 34.087774365732])\n",
-      "scaled bbox is ([-13168196.183847088, -13168196.183829088], [4037456.3408597438, 4037456.3408777434])\n",
-      "ept bounds are [-13271559, 3934093, -102275, -13064831, 4140821, 104453]\n",
-      "Seems fine.\n"
+      "([-13168196.184677301, -13168196.18291042], [4037456.3401063564, 4037456.3406509194])\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "minx = -118.467730111\n",
+    "miny = 34.010635655\n",
+    "maxx = -118.467445511\n",
+    "maxy = 34.010856703\n",
+    "minx, miny = rescale(minx, miny)\n",
+    "maxx, maxy = rescale(-118.291042065, 34.065091929)\n",
+    "print(([minx, maxx], [miny, maxy]))"
+   ]
   },
   {
    "cell_type": "code",
@@ -632,15 +526,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[                                        ] | 0% Completed |  0.0s([-13168196.183680147, -13168196.183678746], [4037456.340875919, 4037456.3408773188])\n",
-      "[########################################] | 100% Completed |  2.3s\n"
+      "[                                        ] | 0% Completed |  0.0s([-13168196.183837853, -13168196.183836453], [4037456.340867933, 4037456.3408693327])\n",
+      "712181\n",
+      "[########################################] | 100% Completed |  2.4s\n"
      ]
     }
    ],
@@ -656,6 +551,7 @@
     "    # make bbox in the ept coord system\n",
     "    scaled_bbox = make_scaled_bbox(lat, lon, bounds=bounds_conf)\n",
     "    print(scaled_bbox)\n",
+    "    print(ident)\n",
     "    \n",
     "    # sanity check will raise erros if scalled bbox is not in the ept bounds\n",
     "    assert (scaled_bbox[0][0] > bounds[0]) & (scaled_bbox[0][1] < bounds[3])\n",
@@ -689,7 +585,7 @@
     "        \n",
     "results = []\n",
     "for i in range(1):\n",
-    "    results.append(row_bounds_ept_query(i+1000))\n",
+    "    results.append(row_bounds_ept_query(i+10))\n",
     "    \n",
     "with ProgressBar():\n",
     "    compute(*results)"
@@ -727,21 +623,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "[-13271559, 3934093, -102275, -13064831, 4140821, 104453]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "bounds"
+   ]
   },
   {
    "cell_type": "code",
