pip install pdal works on Jupyter Lab Geospatial app

--- a/Allometry/la_sunset_allo.ipynb
+++ b/Allometry/la_sunset_allo.ipynb
@@ -696,19 +696,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(32,)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "-118.38393940968001"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "md = f'{aws} s3 cp s3://usgs-lidar-public/IA_FullState/ept.json {tmp} --no-sign-request'\n",
+    "id = 1919622\n",
+    "lat = la.loc[la.ID==712126]['LATITUDE'].values[0]\n",
+    "lon = la.loc[la.ID==712126]['LONGITUDE'].values[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "cmd = f'{aws} s3 cp s3://usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json {tmp} --no-sign-request'\n",
     "subprocess.run(cmd, shell=True, capture_output=True)\n",
     "\n",
     "with open(f'{tmp}/ept.json') as f:\n",
@@ -725,61 +740,71 @@
     "y_scale, y_offset = bag_scale_offset('Y', schema)\n",
     "z_scale, z_offset = bag_scale_offset('Z', schema)\n",
     "\n",
-    "lat, lon = 41.58683275851313, -93.72699977558774\n",
     "\n",
     "scaled_bbox = make_scaled_bbox(lat, lon, bounds=bounds_conf)\n",
     "\n",
+    "def bbox_geojson(lat, lon, filename):\n",
+    "    '''makes wgs84 bbox as geojson for comparison in gis'''\n",
+    "    [xmin, xmax], [ymin, ymax] = make_bbox(lat, lon)\n",
+    "    gjson = {'coordinates' : [[[xmin, ymin], [xmin, ymax], [xmax, ymax], [xmax, ymin]]],\n",
+    "            'type' : 'Polygon'}\n",
+    "    with open(filename, 'w') as of:\n",
+    "        json.dump(gjson, of)\n",
+    "\n",
+    "bbox_geojson(lat, lon, 'xxx.json')        \n",
+    "        \n",
     "# make and validate pipeline\n",
     "t = Template('''\n",
-    "[\n",
-    "    {\n",
-    "        \"type\": \"readers.ept\",\n",
-    "        \"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
-    "        \"bounds\": \"${scaled_bbox}\",\n",
-    "        \"resolution\": 1,\n",
-    "        \"tag\": \"readdata\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"limits\": \"Classification![7:7]\",\n",
-    "        \"type\": \"filters.range\",\n",
-    "        \"tag\": \"nonoise\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"assignment\": \"Classification[:]=0\",\n",
-    "        \"tag\": \"wipeclasses\",\n",
-    "        \"type\": \"filters.assign\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"out_srs\": \"EPSG:26915\",\n",
-    "        \"tag\": \"reprojectUTM\",\n",
-    "        \"type\": \"filters.reprojection\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"tag\": \"groundify\",\n",
-    "        \"type\": \"filters.smrf\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"limits\": \"Classification[2:2]\",\n",
-    "        \"type\": \"filters.range\",\n",
-    "        \"tag\": \"classify\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"filename\": \"la.laz\",\n",
-    "        \"inputs\": [ \"classify\" ],\n",
-    "        \"tag\": \"writerslas\",\n",
-    "        \"type\": \"writers.las\"\n",
-    "    },\n",
-    "    {\n",
-    "        \"filename\": \"la.tif\",\n",
-    "        \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
-    "        \"inputs\": [ \"writerslas\" ],\n",
-    "        \"nodata\": -9999,\n",
-    "        \"output_type\": \"idw\",\n",
-    "        \"resolution\": 1,\n",
-    "        \"type\": \"writers.gdal\",\n",
-    "        \"window_size\": 6\n",
-    "    }\n",
-    "]''')\n",
+    "{\n",
+    "    \"pipeline\": [\n",
+    "        {\n",
+    "\"bounds\": \"([-10425171.940, -10425171.000], [5164494.710, 5164595.200])\",\n",
+    "\"filename\": \"https://s3-us-west-2.amazonaws.com/usgs-lidar-public/USGS_LPC_CA_LosAngeles_2016_LAS_2018/ept.json\",\n",
+    "\"type\": \"readers.ept\",\n",
+    "\"tag\": \"readdata\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"limits\": \"Classification![7:7]\",\n",
+    "            \"type\": \"filters.range\",\n",
+    "            \"tag\": \"nonoise\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"assignment\": \"Classification[:]=0\",\n",
+    "            \"tag\": \"wipeclasses\",\n",
+    "            \"type\": \"filters.assign\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"out_srs\": \"EPSG:4326\",\n",
+    "            \"tag\": \"reprojectwgs84\",\n",
+    "            \"type\": \"filters.reprojection\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"tag\": \"groundify\",\n",
+    "            \"type\": \"filters.smrf\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"limits\": \"Classification[2:2]\",\n",
+    "            \"type\": \"filters.range\",\n",
+    "            \"tag\": \"classify\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"filename\": \"xxx.laz\",\n",
+    "            \"inputs\": [ \"classify\" ],\n",
+    "            \"tag\": \"writerslas\",\n",
+    "            \"type\": \"writers.las\"\n",
+    "        },\n",
+    "        {\n",
+    "            \"filename\": \"xxx.tif\",\n",
+    "            \"gdalopts\": \"tiled=yes,     compress=deflate\",\n",
+    "            \"inputs\": [ \"writerslas\" ],\n",
+    "            \"nodata\": -9999,\n",
+    "            \"output_type\": \"idw\",\n",
+    "            \"resolution\": 1,\n",
+    "            \"type\": \"writers.gdal\",\n",
+    "            \"window_size\": 6\n",
+    "        }\n",
+    "    ]\n",
+    "}''')\n",
     "\n",
     "pipe = t.substitute(scaled_bbox=tbbox)\n",
     "pipeline = pdal.Pipeline(pipe)\n",
@@ -813,6 +838,54 @@
    ],
    "source": [
     "scaled_bbox"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'bounds': [-10758075, 4793202, -361911, -10034133, 5517144, 362031],\n",
+       " 'boundsConforming': [-10758074, 4920531, -1897, -10034134, 5389814, 2017],\n",
+       " 'dataType': 'laszip',\n",
+       " 'hierarchyType': 'json',\n",
+       " 'points': 167692896718,\n",
+       " 'reprojection': {'in': 'EPSG:26915', 'out': 'EPSG:3857'},\n",
+       " 'schema': [{'name': 'X',\n",
+       "   'offset': -10396104,\n",
+       "   'scale': 0.01,\n",
+       "   'size': 4,\n",
+       "   'type': 'signed'},\n",
+       "  {'name': 'Y', 'offset': 5155173, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
+       "  {'name': 'Z', 'offset': 60, 'scale': 0.01, 'size': 4, 'type': 'signed'},\n",
+       "  {'name': 'Intensity', 'size': 2, 'type': 'unsigned'},\n",
+       "  {'name': 'ReturnNumber', 'size': 1, 'type': 'unsigned'},\n",
+       "  {'name': 'NumberOfReturns', 'size': 1, 'type': 'unsigned'},\n",
+       "  {'name': 'ScanDirectionFlag', 'size': 1, 'type': 'unsigned'},\n",
+       "  {'name': 'EdgeOfFlightLine', 'size': 1, 'type': 'unsigned'},\n",
+       "  {'name': 'Classification', 'size': 1, 'type': 'unsigned'},\n",
+       "  {'name': 'ScanAngleRank', 'size': 4, 'type': 'float'},\n",
+       "  {'name': 'UserData', 'size': 1, 'type': 'unsigned'},\n",
+       "  {'name': 'PointSourceId', 'size': 2, 'type': 'unsigned'},\n",
+       "  {'name': 'GpsTime', 'size': 8, 'type': 'float'},\n",
+       "  {'name': 'OriginId', 'size': 4, 'type': 'unsigned'}],\n",
+       " 'srs': {'authority': 'EPSG',\n",
+       "  'horizontal': '3857',\n",
+       "  'wkt': 'PROJCS[\"WGS 84 / Pseudo-Mercator\",GEOGCS[\"WGS 84\",DATUM[\"WGS_1984\",SPHEROID[\"WGS 84\",6378137,298.257223563,AUTHORITY[\"EPSG\",\"7030\"]],AUTHORITY[\"EPSG\",\"6326\"]],PRIMEM[\"Greenwich\",0,AUTHORITY[\"EPSG\",\"8901\"]],UNIT[\"degree\",0.0174532925199433,AUTHORITY[\"EPSG\",\"9122\"]],AUTHORITY[\"EPSG\",\"4326\"]],PROJECTION[\"Mercator_1SP\"],PARAMETER[\"central_meridian\",0],PARAMETER[\"scale_factor\",1],PARAMETER[\"false_easting\",0],PARAMETER[\"false_northing\",0],UNIT[\"metre\",1,AUTHORITY[\"EPSG\",\"9001\"]],AXIS[\"X\",EAST],AXIS[\"Y\",NORTH],EXTENSION[\"PROJ4\",\"+proj=merc +a=6378137 +b=6378137 +lat_ts=0.0 +lon_0=0.0 +x_0=0.0 +y_0=0 +k=1.0 +units=m +nadgrids=@null +wktext +no_defs\"],AUTHORITY[\"EPSG\",\"3857\"]]'},\n",
+       " 'version': '1.0.0',\n",
+       " 'span': 256}"
+      ]
+     },
+     "execution_count": 124,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meta"
    ]
   },
   {
